<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context="per.rick.test_curriculum.activity.CourseInfoActivity">
	<!-- 顶部栏 BEGIN-->
	<RelativeLayout
		android:id="@+id/rl_title"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:background="@color/colorPrimary">

		<ImageButton
			android:id="@+id/ib_back"
			android:layout_width="32dp"
			android:layout_height="32dp"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_centerVertical="true"
			android:layout_marginLeft="@dimen/activity_horizontal_margin"
			android:background="@drawable/ic_arrow_back_blue_600_48dp"
			android:onClick="back"/>

		<TextView
			android:id="@+id/tv_title"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_centerHorizontal="true"
			android:layout_marginBottom="8dp"
			android:layout_marginTop="8dp"
			android:gravity="center"
			android:textColor="@android:color/black"
			android:textSize="20dp"/>

		<TextView
			android:id="@+id/tv_modify"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_alignParentEnd="true"
			android:layout_alignParentRight="true"
			android:layout_marginBottom="8dp"
			android:layout_marginRight="@dimen/activity_horizontal_margin"
			android:layout_marginTop="8dp"
			android:gravity="center"
			android:onClick="modifyCourseInfo"
			android:text="@string/str_modify"
			android:textColor="@color/colorTitleItemNormal"
			android:textSize="18dp"
			/>

		<View
			android:layout_width="match_parent"
			android:layout_height="1px"
			android:layout_alignParentBottom="true"
			android:background="@color/colorSplit"/>
	</RelativeLayout>
	<!-- 顶部栏 END -->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/colorMainBackground"
		android:orientation="vertical"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="4dp"
			android:text="@string/str_course_info"
			android:textColor="@color/colorMediumTitle"
			/>

		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="@color/colorMediumTitle"/>

		<TableLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="4dp"
			android:layout_weight="1"
			android:divider="@drawable/shape_divider"
			android:showDividers="middle|end"
			>

			<TableRow>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/str_course_name"
					android:textColor="@android:color/black"
					android:textSize="16sp"
					/>

				<EditText
					android:id="@+id/et_course_name"
					android:layout_width="match_parent"
					android:layout_height="50dp"
					android:layout_marginLeft="@dimen/activity_horizontal_margin"
					android:layout_weight="1"
					android:background="@android:color/transparent"
					android:focusable="false"
					android:inputType="text"
					android:singleLine="true"
					android:textColor="@color/colorEditText"
					android:textSize="16sp"
					/>
			</TableRow>

			<TableRow>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/str_course_location"
					android:textColor="@android:color/black"
					android:textSize="16sp"
					/>

				<EditText
					android:id="@+id/et_course_location"
					android:layout_width="match_parent"
					android:layout_height="50dp"
					android:layout_marginLeft="@dimen/activity_horizontal_margin"
					android:layout_weight="1"
					android:background="@android:color/transparent"
					android:focusable="false"
					android:inputType="text"
					android:singleLine="true"
					android:textColor="@color/colorEditText"
					android:textSize="16sp"
					/>
			</TableRow>

			<TableRow>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/str_course_teacher"
					android:textColor="@android:color/black"
					android:textSize="16sp"
					/>

				<EditText
					android:id="@+id/et_course_teacher"
					android:layout_width="match_parent"
					android:layout_height="50dp"
					android:layout_marginLeft="@dimen/activity_horizontal_margin"
					android:layout_weight="1"
					android:background="@android:color/transparent"
					android:focusable="false"
					android:inputType="text"
					android:singleLine="true"
					android:textColor="@color/colorEditText"
					android:textSize="16sp"
					/>
			</TableRow>

			<TableRow>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/str_course_interval"
					android:textColor="@android:color/black"
					android:textSize="16sp"
					/>

				<EditText
					android:id="@+id/et_course_interval"
					android:layout_width="match_parent"
					android:layout_height="50dp"
					android:layout_marginLeft="@dimen/activity_horizontal_margin"
					android:layout_weight="1"
					android:background="@android:color/transparent"
					android:focusable="false"
					android:inputType="text"
					android:singleLine="true"
					android:textColor="@color/colorEditText"
					android:textSize="16sp"
					/>
			</TableRow>

			<TableRow>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/str_course_weeks"
					android:textColor="@android:color/black"
					android:textSize="16sp"
					/>

				<EditText
					android:id="@+id/et_course_weeks"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/activity_horizontal_margin"
					android:layout_weight="1"
					android:background="@android:color/transparent"
					android:focusable="false"
					android:inputType="text"
					android:minHeight="50dp"
					android:onClick="chooseWeeks"
					android:singleLine="true"
					android:textColor="@color/colorEditText"
					android:textSize="16sp"
					/>
			</TableRow>
		</TableLayout>

		<Button
			android:id="@+id/bt_delete"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/delete_course_button_bg"
			android:onClick="showDeleteConfirmDialog"
			android:stateListAnimator="@null"
			android:text="@string/str_delete_course"
			android:textColor="@android:color/white"
			android:textSize="16sp"
			/>
	</LinearLayout>
</LinearLayout>
